--- a/BSWebsite1.html
+++ b/BSWebsite1.html
@@ -63,7 +63,7 @@
 					<p class="float-center"><i class="fas fa-play-circle fa-2x align-bottom"> </i> Watch the video</p>
 				</div>
 				<div class="col-xs-12 col-md-6 h-xs-40 h-md-70 w-lg-90 w-xs-60 align-items-center justify-content-center" style="float:left; overflow: hidden;">
-					<img class="h-80" style="width: 100%;" src="pic.jpg">
+					<img class="h-80" style="width: 100%;" src="Media/pic.jpg">
 				</div>
 			</div>
 		</div>
@@ -144,7 +144,7 @@
 		<div class="px-0 align-items-center justify-content-center mx-0" style="display: inline-flex;">
 				<div class="row mx-0" style="background-color: #f2f2f2; padding-top: 90px;clip-path: polygon(0% 100%, 100% 100%, 100% 0%, 98% 1%, 90% 4%, 88% 5%, 84% 6%,73% 9%, 68% 9.5%, 64% 9.5%, 53% 8%, 44% 7%, 37% 6%, 31% 5%, 25% 4%, 16% 3%,  8% 2%, 4% 1%, 0% 0%);">
 					<div class="col-xs-12 col-sm-6">
-						<img style="float: left;padding-top: 10px; overflow: hidden;" class="col-xs-5 col-sm-10 mx-auto " data-aos="fade-right"  data-aos-once="true" src="4.jpg">
+						<img style="float: left;padding-top: 10px; overflow: hidden;" class="col-xs-5 col-sm-10 mx-auto " data-aos="fade-right"  data-aos-once="true" src="Media/4.jpg">
 					</div>
 					<div style="float: left;" class="col-xs-12 col-sm-6 mb-0 px-0">
 						<br>
@@ -250,7 +250,7 @@
 					<button class="traverse mx-3" style="float: left;" onclick="move(-1)">&#10094;</button>
 					<div class="px-0 justify-content-center" style="border: solid;border-radius: 30px;overflow: hidden;">
 						<p class="bg-dark text-dark mb-1 mx-auto" style="width: 45%;border-bottom-right-radius:15px;border-bottom-left-radius:15px;">000</p>
-						<img id="main-display" class="" style="width: 100%;" src="1.jpg">
+						<img id="main-display" class="" style="width: 100%;" src="Media/1.jpg">
 					</div>
 					<button class="traverse mx-3" style="float: left;" onclick="move(1)">&#10095;</button>
 				</div>
